@@ -2843,27 +2843,23 @@ void CPartFile::PreviewFile()
 	}
 	// Need to use quotes in case filename contains spaces.
 	command.Append(wxT(" \""));
-	
 	if ( GetStatus() == PS_COMPLETE ) {
-		command.Append(unicode2char(thePrefs::GetIncomingDir() + wxFileName::GetPathSeparator() + GetFileName()));
+		command.Append(thePrefs::GetIncomingDir() + wxFileName::GetPathSeparator() + GetFileName());
 	} else {
 		command.Append(GetFullName());
-
 		// Remove the .met from filename.
 		for (int i=0;i<4;++i) {
 			command.RemoveLast();
 		}
 	}
-
 	#warning Need PreviewSmallBlocks preferences.
 	/*
 	if (thePrefs.GetPreviewSmallBlocks()) {
 		FlushBuffer(true);
 	}
 	*/
-	
 	command.Append(wxT("\""));
-     wxExecute(command);
+	wxExecute(command);
 }
 
 bool CPartFile::PreviewAvailable()
